💄 style: Fix horizontal scroll

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    width: 300px;
+    width: 320px;
     padding: 16px;
     margin: 0;
 }
